...
        android:layout_height="497dp"

        app:srcCompat="@drawable/logo"
        />

    <ImageButton
        android:id="@+id/admin_land_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:backgroundTint="#000"
...
