...
        android:gravity="center|bottom"
        android:paddingBottom="70dp"
        android:paddingLeft="135dp"
        app:srcCompat="@drawable/pool_icon" />

    <ImageButton
        android:id="@+id/choose_football_button"
        android:alpha=".70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="37dp"
...
